--- a/app/desktop/src/frontend/i18n/en-GB/settingsDialog.json
+++ b/app/desktop/src/frontend/i18n/en-GB/settingsDialog.json
@@ -12,7 +12,7 @@
   "appSettings": {
     "languageLabel": "Language",
     "languageOptionEnGb": "English (UK)",
-    "languageOptionTrTr": "Turkish",
+    "languageOptionTrTr": "Türkçe",
     "themeLabel": "Theme",
     "themeLight": "Light",
     "themeDark": "Dark",
