--- a/app/desktop/src/frontend/i18n/tr-TR/settingsDialog.json
+++ b/app/desktop/src/frontend/i18n/tr-TR/settingsDialog.json
@@ -11,7 +11,7 @@
   },
   "appSettings": {
     "languageLabel": "Dil",
-    "languageOptionEnGb": "İngilizce (BK)",
+    "languageOptionEnGb": "English (UK)",
     "languageOptionTrTr": "Türkçe",
     "themeLabel": "Tema",
     "themeLight": "Açık",
