feat: spanish support is added

--- a/app/desktop/src/frontend/i18n/en-GB/settingsDialog.json
+++ b/app/desktop/src/frontend/i18n/en-GB/settingsDialog.json
@@ -13,6 +13,7 @@
     "languageLabel": "Language",
     "languageOptionEnGb": "English (UK)",
     "languageOptionTrTr": "Türkçe",
+    "languageOptionEsEs": "Español (España)",
     "themeLabel": "Theme",
     "themeLight": "Light",
     "themeDark": "Dark",
