--- a/app/desktop/src/frontend/i18n/tr-TR/settingsDialog.json
+++ b/app/desktop/src/frontend/i18n/tr-TR/settingsDialog.json
@@ -13,6 +13,7 @@
     "languageLabel": "Dil",
     "languageOptionEnGb": "English (UK)",
     "languageOptionTrTr": "Türkçe",
+    "languageOptionEsEs": "Español (España)",
     "themeLabel": "Tema",
     "themeLight": "Açık",
     "themeDark": "Koyu",
