feat: German support is added

--- a/app/desktop/src/frontend/i18n/en-GB/settingsDialog.json
+++ b/app/desktop/src/frontend/i18n/en-GB/settingsDialog.json
@@ -11,9 +11,10 @@
   },
   "appSettings": {
     "languageLabel": "Language",
-    "languageOptionEnGb": "English (UK)",
+    "languageOptionEnGb": "English",
     "languageOptionTrTr": "Türkçe",
-    "languageOptionEsEs": "Español (España)",
+    "languageOptionEsEs": "Español",
+    "languageOptionDeDe": "German",
     "themeLabel": "Theme",
     "themeLight": "Light",
     "themeDark": "Dark",
