feat: French support is added

--- a/app/desktop/src/frontend/i18n/de-DE/settingsDialog.json
+++ b/app/desktop/src/frontend/i18n/de-DE/settingsDialog.json
@@ -15,6 +15,7 @@
     "languageOptionTrTr": "Türkçe",
     "languageOptionEsEs": "Español",
     "languageOptionDeDe": "German",
+    "languageOptionFrFr": "Français",
     "themeLabel": "Design",
     "themeLight": "Hell",
     "themeDark": "Dunkel",
