--- a/app/desktop/src/frontend/i18n/en-GB/settingsDialog.json
+++ b/app/desktop/src/frontend/i18n/en-GB/settingsDialog.json
@@ -15,6 +15,7 @@
     "languageOptionTrTr": "Türkçe",
     "languageOptionEsEs": "Español",
     "languageOptionDeDe": "German",
+    "languageOptionFrFr": "Français",
     "themeLabel": "Theme",
     "themeLight": "Light",
     "themeDark": "Dark",
