--- a/app/desktop/src/frontend/i18n/es-ES/settingsDialog.json
+++ b/app/desktop/src/frontend/i18n/es-ES/settingsDialog.json
@@ -15,6 +15,7 @@
     "languageOptionTrTr": "Türkçe",
     "languageOptionEsEs": "Español",
     "languageOptionDeDe": "German",
+    "languageOptionFrFr": "Français",
     "themeLabel": "Tema",
     "themeLight": "Claro",
     "themeDark": "Oscuro",
