feat: porteguese support is added

--- a/app/desktop/src/frontend/i18n/de-DE/settingsDialog.json
+++ b/app/desktop/src/frontend/i18n/de-DE/settingsDialog.json
@@ -16,6 +16,8 @@
     "languageOptionEsEs": "Español",
     "languageOptionDeDe": "German",
     "languageOptionFrFr": "Français",
+    "languageOptionRuRu": "Русский",
+    "languageOptionPtPt": "Português",
     "themeLabel": "Design",
     "themeLight": "Hell",
     "themeDark": "Dunkel",
