--- a/app/desktop/src/frontend/i18n/es-ES/settingsDialog.json
+++ b/app/desktop/src/frontend/i18n/es-ES/settingsDialog.json
@@ -16,6 +16,8 @@
     "languageOptionEsEs": "Español",
     "languageOptionDeDe": "German",
     "languageOptionFrFr": "Français",
+    "languageOptionRuRu": "Русский",
+    "languageOptionPtPt": "Português",
     "themeLabel": "Tema",
     "themeLight": "Claro",
     "themeDark": "Oscuro",
