--- a/app/desktop/src/frontend/i18n/fr-FR/settingsDialog.json
+++ b/app/desktop/src/frontend/i18n/fr-FR/settingsDialog.json
@@ -16,6 +16,8 @@
     "languageOptionEsEs": "Español",
     "languageOptionDeDe": "German",
     "languageOptionFrFr": "Français",
+    "languageOptionRuRu": "Русский",
+    "languageOptionPtPt": "Português",
     "themeLabel": "Thème",
     "themeLight": "Clair",
     "themeDark": "Sombre",
